# better-mcp

./: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  better-mcp.schema.json  docker-compose.yml  package.json  pnpm-lock.yaml  release-v0.2.md  test-config.json  test-http-config.json  tsconfig.json
.github/workflows/: ci.yml
plugins/: example-echo.ts
python/: README.md  pyproject.toml
python/src/better_mcp/: __init__.py  client.py  models.py  tools.py
python/tests/: test_client.py
src/: auth.ts  config.ts  http-server.ts  index.ts  init.ts  plugins.ts  server.ts  tool-registry.ts
src/__tests__/: autoconfig.test.ts  config.test.ts  db.test.ts  fs-sandbox.test.ts  fs.test.ts  git.test.ts  plugins.test.ts  project.test.ts  shell.test.ts
src/tools/: db.ts  fs.ts  git.ts  project.ts  shell-background.ts  shell.ts
