[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "better-mcp"
version = "0.1.0"
description = "Python client for better-mcp - MCP server with filesystem, database, shell, git, and project tools"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Erne Santana" },
]
keywords = ["mcp", "mcp-client", "ai", "agent", "filesystem", "database", "shell", "git"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/erquier/better-mcp"
Repository = "https://github.com/erquier/better-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/better_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
